# Numpy_paskaita12_27

./: 1.py  2.py  advancedNumpy.py  main.py  pyproject.toml
