[tool.poetry]
name = "Numpy_paskaita12_27"
version = "0.1.0"
description = ""
authors = ["DenisKof82 <k.denisas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
example-data-crawler = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
